--- a/pm2.config.json
+++ b/pm2.config.json
@@ -1,8 +1,8 @@
 {
-  "app": [
+  "apps": [
     {
       "name": "RealWorld",
-      "exec": "npm",
+      "script": "npm",
       "args": "start"
     }
   ]
